# thermometer

./: CMakeLists.txt  README.md
src/: app.c  app.h  dht22.c  dht22.h  lcd1602.c  lcd1602.h  main.c
